[package]
name = "adventofcode2023"
version = "0.1.0"
edition = "2021"
authors = ["Stephen Watson <docwatsonphd@gmail.com>"]
description = "A collection of Advent of Code 2023 input and solutions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
